--- a/package.json
+++ b/package.json
@@ -1,38 +1,49 @@
 {
-  "name": "craft-client",
-  "version": "0.1.0",
+  "name": "example-landing",
+  "version": "0.2.0-beta.2",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "next dev -p 3001",
+    "build": "next build",
+    "export": "next export",
+    "clean": "rimraf lib .next out dist"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@craftjs/core": "^0.2.0-beta.2",
+    "@craftjs/layers": "^0.2.0-beta.2",
+    "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.2",
+    "autoprefixer": "latest",
+    "classnames": "^2.2.6",
+    "cssnano": "^4.1.10",
+    "debounce": "^1.2.0",
+    "lzutf8": "^0.5.5",
+    "next": "^10.2.0",
+    "next-seo": "^4.24.0",
+    "postcss": "latest",
+    "re-resizable": "^6.1.0",
+    "react": "17.0.2",
+    "react-color": "^2.17.3",
+    "react-contenteditable": "^3.3.2",
+    "react-dom": "17.0.2",
+    "react-loading": "^2.0.3",
+    "react-rnd": "^10.1.1",
+    "react-youtube": "^7.9.0",
+    "styled-components": "^4.4.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^12.12.5",
+    "@types/react-color": "^3.0.1",
+    "@types/styled-components": "^4.1.20",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "cross-env": "^6.0.3",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "latest",
+    "typescript": "^3.7.5"
   }
 }
