--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@craftjs/core": "^0.2.0-beta.2",
     "@craftjs/layers": "^0.2.0-beta.2",
-    "@material-ui/core": "^4.5.2",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/styles": "^4.5.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "autoprefixer": "latest",
+    "axios": "^0.26.0",
     "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
     "cssnano": "^4.1.10",
     "debounce": "^1.2.0",
     "lzutf8": "^0.5.5",
     "next": "^10.2.0",
+    "next-redux-wrapper": "^7.0.5",
     "next-seo": "^4.24.0",
     "postcss": "latest",
     "re-resizable": "^6.1.0",
@@ -28,8 +31,13 @@
     "react-contenteditable": "^3.3.2",
     "react-dom": "17.0.2",
     "react-loading": "^2.0.3",
+    "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^7.2.6",
     "react-rnd": "^10.1.1",
     "react-youtube": "^7.9.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
