--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-color": "^2.17.3",
     "react-contenteditable": "^3.3.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-loading": "^2.0.3",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.6",
