--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "clsx": "^1.1.1",
     "cssnano": "^4.1.10",
     "debounce": "^1.2.0",
+    "formidable": "^2.0.1",
     "lzutf8": "^0.5.5",
     "next": "^10.2.0",
+    "next-connect": "^0.12.2",
     "next-redux-wrapper": "^7.0.5",
     "next-seo": "^4.24.0",
     "postcss": "latest",
     "re-resizable": "^6.1.0",
     "react": "17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-color": "^2.17.3",
     "react-contenteditable": "^3.3.2",
     "react-dom": "17.0.2",
@@ -34,6 +37,7 @@
     "react-loading": "^2.0.3",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-rnd": "^10.1.1",
     "react-youtube": "^7.9.0",
     "redux": "^4.1.2",
