--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "clean": "rimraf lib .next out dist"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@craftjs/core": "^0.2.0-beta.2",
     "@craftjs/layers": "^0.2.0-beta.2",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
+    "@mui/styles": "^5.4.4",
     "autoprefixer": "latest",
     "axios": "^0.26.0",
     "classnames": "^2.2.6",
@@ -35,6 +36,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-loading": "^2.0.3",
+    "react-material-ui-carousel": "^3.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
